projects/Rancher-k8s/log/log-controller-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: log-controller-daemonset
  namespace: wz-system
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: log-controller-daemonset
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: log-controller-daemonset
    spec:
      containers:
      - env:
        - name: IDC
          value: idc
        - name: NODENAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        image: harbor.wz.cn/wzcloud/logcontroller-daemonset:v1.0
        imagePullPolicy: IfNotPresent
        name: logcontroller-filebeat-test
        resources:
          limits:
            cpu: 800m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 250Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/filebeat
          name: filebeat-config
        - mountPath: /etc/config/filebeat
          name: filebeat-template
      - env:
        - name: NODENAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        image: harbor.wz.cn/wzcloud/filebeat-daemonset:so-v1.5
        imagePullPolicy: Always
        name: filebeat
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 2Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/filebeat
          name: filebeat-config
        - mountPath: /data/kubelet/pods
          name: logvolume
        - mountPath: /data/docker/containers
          name: containerlogvolume
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: x-harbor
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        operator: Exists
      volumes:
      - emptyDir: {}
        name: filebeat-config
      - hostPath:
          path: /var/lib/kubelet/pods
          type: Directory
        name: logvolume
      - hostPath:
          path: /var/lib/docker/containers
          type: Directory
        name: containerlogvolume
      - configMap:
          defaultMode: 420
          name: logsidecar-injector-configmap
        name: filebeat-template
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 40
    type: RollingUpdate
