projects/Rancher-k8s/log/logsidecar-injector.yaml

apiVersion: v1
kind: Service
metadata:
  name: logsidecar-injector
  namespace: wz-system
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: logsidecar-injector
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: wz-system/logsidecar-injector-server-cert
  labels:
    app: logsidecar-injector
  name: logsidecar-injector
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: logsidecar-injector
        namespace: wz-system
        port: 443
    failurePolicy: Fail
    matchPolicy: Exact
    name: logsidecar-injector.logging.io
    namespaceSelector:
      matchExpressions:
        - key: logging.system.io/logsidecar-injection
          operator: In
          values:
            - enabled
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
        scope: '*'
    sideEffects: None
    timeoutSeconds: 30

---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
  name: logsidecar-injector
  namespace: wz-system
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: logsidecar-injector
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: logsidecar-injector
    spec:
      containers:
        - args:
            - /logsidecar_linux
            - -tls-cert-file
            - /etc/logsidecar-injector/tls.crt
            - -tls-private-key-file
            - /etc/logsidecar-injector/tls.key
            - -filebeat-yml-template
            - /etc/logsidecar-injector/filebeat/filebeat.yml.template
            - -inputs-yml-template
            - /etc/logsidecar-injector/filebeat/inputs.yml.template
            - -lsc-image
            - harbor.wz.cn/start3-test/filebeat:v1.3
            - -logtostderr
            - -v
            - "2"
          image: harbor.wz.cn/start3-test/logconfig-sidecar:24.0
          imagePullPolicy: IfNotPresent
          name: logsidecar-injector
          resources:
            limits:
              cpu: "1"
              memory: 1000Mi
            requests:
              cpu: 500m
              memory: 1000Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/logsidecar-injector
              name: service-certs
            - mountPath: /etc/logsidecar-injector/filebeat
              name: filebeat-config-template
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: x-harbor
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: service-certs
          secret:
            defaultMode: 420
            secretName: logsidecar-injector
        - configMap:
            defaultMode: 420
            name: logsidecar-injector-configmap
          name: filebeat-config-template
